--- a/hd/lang/missing/lex_lv.txt
+++ b/hd/lang/missing/lex_lv.txt
@@ -46,6 +46,16 @@ en: %t: %s before their %s
 fr: %t : %s avant son/sa %s
 lv:
 
+    7 generation H tree
+en: 7 generation H tree
+fr: arbre en H 7 générations
+lv:
+
+    9 generations H tree
+en: 9 generations H tree
+fr: arbre en H 9 générations
+lv:
+
     a brother-in-law/brothers-in-law/a sister-in-law/sisters-in-law
 en: one brother-in-law/brothers-in-law/one sister-in-law/sisters-in-law
 fr: un beau-frère/beaux-frères/une belle-sœur/belles-sœurs
@@ -331,6 +341,11 @@ en: copy the link to the clipboard
 fr: copier le lien dans le presse-papier
 lv:
 
+    copy the link to the clipboard
+en: copy the link to the clipboard
+fr: copier le lien dans le presse-papier
+lv:
+
     country
 en: Country
 fr: Pays
@@ -561,6 +576,11 @@ en: Endowment (LDS)
 fr: dotation LDS
 lv:
 
+    edit the graph
+en: edit the graph
+fr: éditer le graphe
+lv:
+
     edit tree
 en: edit the graph
 fr: éditer le graphe
@@ -656,6 +676,11 @@ en: full tree
 fr: arbre complet
 lv:
 
+    full width display/columns display
+en: full width display/columns display
+fr: affichage pleine largeur/affichage sur deux colonnes
+lv:
+
     full width/columns
 en: full width display/columns display
 fr: affichage pleine largeur/affichage sur deux colonnes
@@ -666,6 +691,11 @@ en: Funeral
 fr: funérailles
 lv:
 
+    fusion implexes
+en: fusion implexes
+fr: fusionner les implexes
+lv:
+
     godparent
 en: godparent
 fr: parrain ou marraine
@@ -674,6 +704,16 @@ lv:
     graduate
 en: Graduation
 fr: diplôme
+lv:
+
+    great-granduncles and great-grandaunts
+en: great-granduncles and great-grandaunts
+fr: arrières-grands-oncles et arrières-grands-tantes
+lv:
+
+    H-Tree
+en: H-Tree
+fr: arbre en H
 lv:
 
     h7-tree
@@ -756,6 +796,11 @@ en: H-Tree
 fr: arbre en H
 lv:
 
+    I-Tree
+en: I-Tree
+fr: arbre en I
+lv:
+
     iftitles/public/private
 en: If titles/Public/Private
 fr: si titres/public/privé
@@ -826,6 +871,11 @@ en: I-Tree
 fr: arbre en I
 lv:
 
+    keyboard shortcuts
+en: keyboard shortcuts
+fr: raccourcis clavier
+lv:
+
     label
 en: label
 fr: étiquette
@@ -836,7 +886,17 @@ en: last revision
 fr: dernière révision
 lv:
 
+    last revision
+en: last revision
+fr: dernière révision
+lv:
+
     last sosa level not navigable
+en: last Sosa level not navigable. Use ancestors list.
+fr: le dernier niveau des Sosa n’est pas navigable. Utilisez la liste des ancêtres.
+lv:
+
+    last Sosa level not navigable. Use ancestors list.
 en: last Sosa level not navigable. Use ancestors list.
 fr: le dernier niveau des Sosa n’est pas navigable. Utilisez la liste des ancêtres.
 lv:
@@ -844,6 +904,11 @@ lv:
     link back to parents
 en: link back to parents
 fr: lien retour vers les parents
+lv:
+
+    link implexes
+en: link implexes
+fr: relier les implexes
 lv:
 
     link to children
@@ -859,6 +924,11 @@ lv:
     list eclair
 en: list by name, place & date
 fr: liste-éclair
+lv:
+
+    list of available genealogies (use gwsetup)
+en: list of available genealogies (use gwsetup)
+fr: listes des généalogies disponibles (utilise gwsetup)
 lv:
 
     listePassenger
@@ -1061,7 +1131,17 @@ en: module/modules
 fr: module/modules
 lv:
 
+    module/modules
+en: module/modules
+fr: module/modules
+lv:
+
     move up/down
+en: move up/move down/move up cursor/move down cursor
+fr: remonter/descendre/remonter le curseur/descendre le curseur
+lv:
+
+    move up/move down/move up cursor/move down cursor
 en: move up/move down/move up cursor/move down cursor
 fr: remonter/descendre/remonter le curseur/descendre le curseur
 lv:
@@ -1094,6 +1174,11 @@ lv:
     naturalisation
 en: Naturalization
 fr: naturalisation
+lv:
+
+    navigate on the tree
+en: navigate on the tree
+fr: naviguer sur l’arbre
 lv:
 
     navigate on tree
@@ -1139,6 +1224,11 @@ lv:
     next relationship path
 en: Next relationship path
 fr: chemin suivant
+lv:
+
+    no date
+en: no date
+fr: sans date
 lv:
 
     no descendants
@@ -1201,6 +1291,11 @@ en: old name
 fr: ancien nom
 lv:
 
+    on
+en: on
+fr: le
+lv:
+
     on (weekday day month year)
 en: on
 fr: le
@@ -1209,6 +1304,11 @@ lv:
     one additional generation
 en: one additional generation
 fr: une génération en plus
+lv:
+
+    one sibling-in-law/siblings-in-law
+en: one sibling-in-law/siblings-in-law
+fr: un beau-frère ou belle-sœur/beaux-frères et belles-sœurs
 lv:
 
     only
@@ -1246,6 +1346,16 @@ en: Father's parents
 fr: grands-parents paternels
 lv:
 
+    permute personnal events
+en: permute personnal events
+fr: permuter les événéments individuels
+lv:
+
+    permute the events of family %s
+en: permute the events of family %s
+fr: permuter les événements de la famille %s
+lv:
+
     person source
 en: Source of individual
 fr: source individu
@@ -1261,6 +1371,11 @@ en: places
 fr: lieux
 lv:
 
+    Please, enter the name of the database you want to use:
+en: Please, enter the name of the database you want to use:
+fr: Tapez à l’identique le nom de la généalogie que vous voulez utiliser :
+lv:
+
     plus
 en: More
 fr: plus
@@ -1274,6 +1389,11 @@ lv:
     preview family tree
 en: Preview Family Tree
 fr: aperçu de l’arbre
+lv:
+
+    previous revision/next revision
+en: previous revision/next revision
+fr: révision précédente/révision suivante
 lv:
 
     previous/next diff
@@ -1346,6 +1466,11 @@ en: remove the last added module
 fr: retirer le dernier module ajouté
 lv:
 
+    remove the last added module
+en: remove the last added module
+fr: retirer le dernier module ajouté
+lv:
+
     reserved to friends or wizards
 en: reserved to friends or wizards
 fr: réservée aux amis et magiciens
@@ -1387,8 +1512,8 @@ fr: identique au n° Sosa
 lv:
 
     scale
-en: years by generation
-fr: années par génération
+en: scale
+fr: echelle
 lv:
 
     scellentChildLDS
@@ -1481,6 +1606,11 @@ en: click an individual below to calculate the family link.
 fr: cliquez sur la personne avec laquelle vous souhaitez réaliser un calcul de parenté.
 lv:
 
+    select personalized modules
+en: select personalized modules
+fr: selectionner les modules personnalisés
+lv:
+
     select the two revisions you want to compare
 en: Select revisions to view history.
 fr: sélectionnez les deux révisions que vous voulez comparer.
@@ -1496,6 +1626,11 @@ en: keyboard shortcuts
 fr: raccourcis clavier
 lv:
 
+    show dag/hide dag
+en: show dag/hide dag
+fr: afficher graphe orienté acyclique (dag)/masquer graphe orienté acyclique (dag)
+lv:
+
     show implex
 en: show implex
 fr: identifier les implexes
@@ -1509,6 +1644,11 @@ lv:
     siblings of the great-grandparents
 en: great-granduncles and great-grandaunts
 fr: arrières-grands-oncles et arrières-grands-tantes
+lv:
+
+    simple chronology/detailed chronology
+en: simple chronology/detailed chronology
+fr: chronologie simple/chronologie détaillée
 lv:
 
     size
@@ -1542,6 +1682,11 @@ fr: conjoint/conjoints
 lv:
 
     spouses info
+en: spouses informations
+fr: informations conjoints
+lv:
+
+    spouses informations
 en: spouses informations
 fr: informations conjoints
 lv:
@@ -1606,6 +1751,11 @@ en: timeline
 fr: chronologie
 lv:
 
+    time line of the family
+en: time line of the family
+fr: chronologie de la famille
+lv:
+
     to change
 en: Edit
 fr: pour changer
@@ -1624,6 +1774,16 @@ lv:
     town
 en: Town
 fr: Commune
+lv:
+
+    tree of events
+en: tree of events
+fr: arbre des événements
+lv:
+
+    tree of relations
+en: tree of relations
+fr: arbre des relations
 lv:
 
     tree of witnesses
@@ -1744,6 +1904,11 @@ lv:
     witnesses to my events and godparents
 en: witnesses to my events and godparents
 fr: témoins à mes évènements et parrains/marraines
+lv:
+
+    years by generation
+en: years by generation
+fr: années par génération
 lv:
 
     you are visible/you are not visible
